<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kids On Wheels</string>
    <string name="action_settings">Settings</string>
    <string name="picked_text">Picked</string>
    <string name="show_text">No Show</string>
    <string name="on_the_way_text">On the way</string>
    <string name="title_activity_directions">Directions</string>
    <string name="no_student_addresses_specified">No addresses to get Directions for</string>
    <string name="home_screen_wait_message">Please wait. Finding best route</string>
    <string name="next_pickup">Next Pickup</string>
    <string name="list_steps">List Steps</string>
    <string name="title_activity_travel_steps">Travel Steps</string>
    <string name="hello_world">Hello world!</string>
    <string name="alert_location">This app requires phone\'s data and positioning services are enabled.\n\nPlease got to system settings and turn them on.</string>
    <string name="alert_location_open_location_settings_button">Turn on location</string>
    <string name="alert_location_back_button">Cancel</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="error_location_service_unavailable">This app requires Google\'s location services. Please enable location services in your settings.</string>
    <string name="button_enable_location_services">ENABLE LOCATION SERVICES</string>

    <string name="error_network_service_unavailable">This app requires network connection. Please check you network connection and retry.</string>
    <string name="button_retry">RETRY</string>
    <string name="title_activity_create_student">CreateStudentActivity</string>

    <string name="hint_tap_to_change_image">Tap to change image</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_house_number">House Number</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="enter_student_details">Please enter student details.</string>
    <string name="save">Save</string>
    <string name="empty_students_list">You do not have any students for pickup. Please add Student details.</string>
    <string name="title_activity_student_details">Student Details</string>

    <string-array name="drawer_items_array">
        <item>Add Student</item>
        <item>Settings</item>
        <item>Feedback</item>
        <item>Help</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>
