<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:maxHeight="48dp"
        android:maxWidth="48dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:src="@drawable/ic_location_large" />

    <TextView
        android:id="@+id/tap_to_change_img_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/avatar"
        android:layout_alignTop="@id/avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/avatar"
        android:gravity="center"
        android:text="@string/hint_tap_to_change_image"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/first_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/avatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/avatar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_first_name"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/primary_material_light" />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/avatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_last_name"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/primary_material_light" />

    <AutoCompleteTextView
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_address"
        android:imeOptions="actionDone"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@color/primary_material_light" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/fab_add_default"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
